--- a/css/styles.css
+++ b/css/styles.css
@@ -352,4 +352,12 @@ button:focus {
         margin-bottom: 16px;
 }
 
+.footer-h-icons {
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+        color: #ffffff;
+}      
+       
 /* #endregion */
