--- a/css/styles.css
+++ b/css/styles.css
@@ -352,12 +352,13 @@ button:focus {
         margin-bottom: 16px;
 }
 
-.footer-h-icons {
+.footer-p-icons {
         font-weight: 500;
         font-size: 16px;
         line-height: 1.5;
         letter-spacing: 0.02em;
         color: #ffffff;
+        margin-bottom: 16px;
 }      
        
 /* #endregion */
