--- a/css/styles.css
+++ b/css/styles.css
@@ -359,6 +359,16 @@ button:focus {
         letter-spacing: 0.02em;
         color: #ffffff;
         margin-bottom: 16px;
-}      
-       
+}  
+
+.div-icons {}
+
+.icon-ul-footer {}
+
+.icon-li-footer {}
+
+.icon-a-footer {}
+
+.icon-svg-footer {}
+
 /* #endregion */
