--- a/css/styles.css
+++ b/css/styles.css
@@ -361,6 +361,10 @@ button:focus {
         margin-bottom: 16px;
 }  
 
+.div-two-all-footer {}
+
+.div-soc-media{}
+
 .div-icons {}
 
 .icon-ul-footer {}
