--- a/css/styles.css
+++ b/css/styles.css
@@ -362,14 +362,24 @@ button:focus {
 } 
 
 .div-one-paragraf {
-        display: flex;
-        align-items: baseline;
         margin-right: 120px;
 }
 
 .div-two-paragraf {}
 
-.div-soc-media {}
+.div-soc-media {
+        display: flex;
+        align-items: baseline;
+}
+
+.div-soc-media-p {
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+        color: #ffffff;
+        margin-bottom: 16px;
+}
 
 .div-icons-footer {}
 
