--- a/css/styles.css
+++ b/css/styles.css
@@ -157,7 +157,7 @@ box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
         background-repeat: no-repeat;
         background-position: center;
         background-size: cover;
-        transition:  background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 .knopka {
@@ -326,12 +326,16 @@ button:focus {
 
 /* #region footer */
 .logo-footer-all {
-    background-color: #2E2F42;
-    padding: 100px 0;
+        background-color: #2E2F42;
+        padding: 100px 0;
+}
+.logo-footer-all, .container {
+        display: flex;
+        align-items: baseline;
 }
 
 .logo-footer-a {
-    font-family: "Raleway", sans-serif;
+        font-family: "Raleway", sans-serif;
         font-weight: 700;
         font-size: 18px;
         line-height: 1.17;
@@ -340,7 +344,7 @@ button:focus {
         color: #4d5ae5;
 }
 .logo-style-studio-footer {
-    font-family: "Raleway", sans-serif;
+        font-family: "Raleway", sans-serif;
         font-weight: 700;
         font-size: 18px;
         line-height: 1.16667;
