--- a/css/styles.css
+++ b/css/styles.css
@@ -398,9 +398,20 @@ button:focus {
         gap: 16px;
 }
 
-.icon-li-footer {}
+.icon-li-footer {
+        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 
-.icon-a-footer {}
+.icon-a-footer {
+        fill: #F4F4FD;
+        width: 100%;
+        height: 100%;
+        background-color: #4d5ae5;
+        border-radius: 50%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+}
 
 .icon-svg-footer {}
 
