--- a/css/styles.css
+++ b/css/styles.css
@@ -396,6 +396,8 @@ button:focus {
 .icon-ul-footer {
         display: flex;
         gap: 16px;
+        width: 40px;
+        height: 40px;
 }
 
 .icon-li-footer {
