--- a/css/styles.css
+++ b/css/styles.css
@@ -396,12 +396,12 @@ button:focus {
 .icon-ul-footer {
         display: flex;
         gap: 16px;
-        width: 40px;
         height: 40px;
+        width: 40px;
 }
 
 .icon-li-footer {
-        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .icon-a-footer {
