--- a/css/styles.css
+++ b/css/styles.css
@@ -402,6 +402,7 @@ button:focus {
 
 .icon-li-footer {
         transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        width: 40px;
 }
 
 .icon-a-footer {
