--- a/css/styles.css
+++ b/css/styles.css
@@ -108,7 +108,8 @@ box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
 }
 .nav-item-link:hover,
 .nav-item-link:focus {
-    color: #404bbf;
+        color: #404bbf;
+        position: relative;
 }
 
 .address-li {
@@ -402,7 +403,6 @@ button:focus {
 
 .icon-li-footer {
         transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-        width: 40px;
 }
 
 .icon-a-footer {
