--- a/css/styles.css
+++ b/css/styles.css
@@ -43,7 +43,6 @@ ul {
 
 button {
     cursor: pointer;
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 img {
@@ -181,6 +180,7 @@ img {
 button:hover,
 button:focus {
     background-color: #404BBF;
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 /* #endregion */
 
@@ -405,7 +405,9 @@ button:focus {
         width: 40px;
 }
 
-.icon-li-footer 
+.icon-li-footer {
+        width: 40px;
+}
 
 .icon-a-footer {
         fill: #F4F4FD;
