--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,6 @@
 
 a {
     text-decoration: none;
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .visually-hidden {
@@ -162,7 +161,6 @@ img {
         background-repeat: no-repeat;
         background-position: center;
         background-size: cover;
-        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 .knopka {
@@ -176,7 +174,8 @@ img {
         min-width: 169px;
         height: 56px;
         color: #ffffff;
-        background-color: #4D5AE5
+        background-color: #4D5AE5;
+        transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
         }
 button:hover,
 button:focus {
