--- a/css/styles.css
+++ b/css/styles.css
@@ -417,7 +417,7 @@ button:focus {
         display: flex;
         justify-content: center;
         align-items: center;
-        
+        transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
         
 }
 
