--- a/css/styles.css
+++ b/css/styles.css
@@ -122,6 +122,7 @@ img {
         padding-bottom: 24px;
         display: block;
         position: relative;
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 .nav-item-link:hover,
