--- a/css/styles.css
+++ b/css/styles.css
@@ -193,12 +193,11 @@ img {
         height: 56px;
         color: #ffffff;
         background-color: #4D5AE5;
-        transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
         }
 button:hover,
 button:focus {
     background-color: #404BBF;
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 /* #endregion */
 
