--- a/css/styles.css
+++ b/css/styles.css
@@ -308,6 +308,37 @@ button:focus {
         text-align: center;
         color: #434455;
 }
+
+.ul-soc {
+        display: flex;
+        justify-content: center;
+        gap: 24px;
+}
+
+.li-soc {
+        width: 40px;
+        height: 40px;
+}
+
+.a-soc {
+        width: 100%;
+        height: 100%;
+        background-color: #4d5ae5;
+        border-radius: 50%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+}
+
+.a-soc:hover,
+.a-soc:focus {
+        background-color: #404bbf;
+}
+
+.svg-soc {
+        fill: #f4f4fd;
+}
+
 /* #endregion */
 
 /* #region section-4 */
