--- a/css/styles.css
+++ b/css/styles.css
@@ -368,6 +368,24 @@ button:focus {
 
 .section-four-li 
 
+.cont-img-a:hover .sec-four-cont-p {
+        transform: translateY(0%);
+}
+
+.container-img {
+        position: relative;
+        overflow: hidden;
+}
+
+.sec-four-cont-p {
+        position: absolute;
+        top:0;
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+        color: #f4f4fd;
+}
+
 .cont-div-four {
         padding: 32px 16px;
         border: 1px solid #e7e9fc;
