--- a/css/styles.css
+++ b/css/styles.css
@@ -366,9 +366,7 @@ button:focus {
         row-gap: 48px;
 }
 
-.section-four-li {
-        position: relative;
-}
+.section-four-li 
 
 .cont-img-a:hover .sec-four-cont-p {
         transform: translateY(0%);
@@ -376,6 +374,7 @@ button:focus {
 
 .container-img {
         overflow: hidden;
+        position: relative;
 }
 
 .cont-p {
@@ -388,6 +387,12 @@ button:focus {
         line-height: 1.5;
         letter-spacing: 0.02em;
         color: #f4f4fd;
+        padding: 40px 32px;
+        background-color: #4d5ae5;
+        height: 100%;
+        width: 100%;
+        transform: translateY(100%);
+        transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .cont-div-four {
