--- a/css/styles.css
+++ b/css/styles.css
@@ -370,11 +370,15 @@ button:focus {
 
 .container-img:hover .sec-four-cont-p {
         transform: translateY(0%);
+        box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+                0px 1px 1px rgba(46, 47, 66, 0.16),
+                0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .container-img {
         overflow: hidden;
         position: relative;
+        transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 
