--- a/css/styles.css
+++ b/css/styles.css
@@ -366,7 +366,9 @@ button:focus {
         row-gap: 48px;
 }
 
-.section-four-li 
+.section-four-li {
+        transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 
 .container-img:hover .sec-four-cont-p {
         transform: translateY(0%);
@@ -378,7 +380,6 @@ button:focus {
 .container-img {
         overflow: hidden;
         position: relative;
-        transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 
