--- a/css/styles.css
+++ b/css/styles.css
@@ -372,9 +372,12 @@ button:focus {
 
 .container-img:hover .sec-four-cont-p {
         transform: translateY(0%);
+}
+
+.container-img:hover {
         box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
-                0px 1px 1px rgba(46, 47, 66, 0.16),
-                0px 2px 1px rgba(46, 47, 66, 0.08);
+                        0px 1px 1px rgba(46, 47, 66, 0.16),
+                        0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .container-img {
