--- a/css/styles.css
+++ b/css/styles.css
@@ -368,6 +368,9 @@ button:focus {
 
 .section-four-li {
         transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+                        0px 1px 1px rgba(46, 47, 66, 0.16),
+                        0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .container-img:hover .sec-four-cont-p {
