--- a/css/styles.css
+++ b/css/styles.css
@@ -377,8 +377,9 @@ button:focus {
 
 /* #region section-4 */
 .section-four-all {
-        padding-top: 120px;
-        padding-bottom: 120px;
+        padding: 120px 0;
+        display: flex;
+        align-items: center;
 }
 
 .section-four-h_two {
@@ -394,23 +395,25 @@ button:focus {
 
 .section-four-ul {
         display: flex;
+        justify-content: center;
         flex-wrap: wrap;
-        column-gap: 24px;
-        row-gap: 48px;
+        gap: 48px 24px;
+        padding-left: 0;
+        margin: 0;
 }
 
 .section-four-li {
+        position: relative;
+        background-color: #ffffff;
+        width: calc((100% - 48px) / 3);
         transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-        box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
-                        0px 1px 1px rgba(46, 47, 66, 0.16),
-                        0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
-.container-img:hover .sec-four-cont-p {
+.section-four-li:hover .sec-four-cont-p {
         transform: translateY(0%);
 }
 
-.container-img:hover {
+.section-four-li:hover {
         box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
                         0px 1px 1px rgba(46, 47, 66, 0.16),
                         0px 2px 1px rgba(46, 47, 66, 0.08);
@@ -419,13 +422,21 @@ button:focus {
 .container-img {
         overflow: hidden;
         position: relative;
+        display: block;
+}
+
+.container-img img {
+        display: block;
+        width: 100%;
+        height: auto;
 }
 
 
 
 .sec-four-cont-p {
         position: absolute;
-        top: 0;
+        bottom: 0;
+        left: 0;
         font-size: 16px;
         line-height: 1.5;
         letter-spacing: 0.02em;
@@ -439,9 +450,12 @@ button:focus {
 }
 
 .cont-div-four {
+        border-bottom: 1px solid #e7e9fc;
+        border-left: 1px solid #e7e9fc;
+        border-right: 1px solid #e7e9fc;
+        display: flex;
+        align-items: flex-start;
         padding: 32px 16px;
-        border: 1px solid #e7e9fc;
-        border-top: none;
 }
 
 .section-four-h_tree {
@@ -450,7 +464,7 @@ button:focus {
         line-height: 1.2;
         letter-spacing: 0.02em;
         color: #2e2f42;
-        margin-bottom: 8px
+        margin-bottom: 8px;
 }
 
 .section-four-p {
