--- a/css/styles.css
+++ b/css/styles.css
@@ -456,6 +456,7 @@ button:focus {
         display: flex;
         align-items: flex-start;
         padding: 32px 16px;
+        flex-direction: column;
 }
 
 .section-four-h_tree {
