--- a/css/styles.css
+++ b/css/styles.css
@@ -303,6 +303,8 @@ button:focus {
         color: #2e2f42;
         text-transform: capitalize;
         margin-bottom: 72px;
+        margin-top: 120px;
+
 }
 
 .section-tree-ul {
